index-from-pv/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-index-cm
  labels:
    app: nginx-index-cm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-index-cm
  template:
    metadata:
      labels:
        app: nginx-index-cm
    spec:
      containers:
        - image: quay.io/packit/nginx-unprivileged:latest
          name: nginx
          volumeMounts:
            - name: index-volume
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 8080
              protocol: TCP
      volumes:
        - name: index-volume
          # configMap:
          #   name: nginx-index
          persistentVolumeClaim:
            claimName: nginx-index
